--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ playground ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ playground ]
 
 jobs:
   build:
