--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm install --global yarn
     - run: yarn --cwd redisinsight/api/
-    # - run: npm test
+    - run: yarn build:statics:win
+    - run: yarn package:prod
+    - run: ls ./release
